# tailwindcss-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE
.github/workflows/: general.yml
src/: init.rs  lib.rs  main.rs
src/algolia/: mod.rs
src/slashcommands/: mod.rs  tailwind.rs
