[package]
name = "tailwind_bot"
version = "0.1.0"
authors = ["ecklf <ecklf@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tailwind_bot"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.10.9", default-features = false, features = ["client", "standard_framework", "gateway", "rustls_backend", "model", "cache", "collector", "unstable_discord_api"] }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.4", features = ["json"] }
anyhow = "1.0.43"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"